<resources>
    <string name="app_name">Dictionary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="eng_viet">English - Vietnamese</string>
    <string name="favourite_word">Favourite Words</string>
    <string name="your_word">Your Words</string>
    <string name="practice">Practice</string>
    <string name="definition">Definition</string>
    <string name="definition_of_the_words">Definition of the words</string>
    <string name="textview">TextView</string>
    <string name="action_exit">Exit</string>
    <string name="clear_history">Clear History</string>
    <string name="about">About</string>
    <string name="your_searched_words">Your Searched Words</string>
    <string name="clear_favourite_words">Clear Favourite Words</string>
    <string name="communication">Communication</string>
    <string name="share">Share</string>
    <string name="help">Help</string>
    <string name="enable_dark_mode">Dark mode</string>
    <string name="notification">Notification</string>
    <string name="dark_mode">Dark Mode</string>
</resources>
