<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SettingsActivity"
    android:background="@color/backgroundColor">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@color/colorPrimary">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_settings"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
        
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?selectableItemBackground"
            android:layout_margin="2dp"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="@color/backgroundColor">

            <TextView
                android:id="@+id/share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/share"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/textColor"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_share"
                android:layout_gravity="center|end"
                android:clickable="true"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?selectableItemBackground"
            android:layout_margin="2dp"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="@color/backgroundColor">

            <TextView
                android:id="@+id/mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/dark_mode"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/textColor"
                />
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_nights"
                android:layout_gravity="end|center"
                android:clickable="true"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?selectableItemBackground"
            android:layout_margin="2dp"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="@color/backgroundColor">
            
            <TextView
                android:id="@+id/clear_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/clear_history"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/textColor"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_history"
                android:layout_gravity="end|center"
                android:clickable="true"/>

        </androidx.cardview.widget.CardView>
        
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
